Fix cutting too long logs

--- a/assets/styles/main/log.sass
+++ b/assets/styles/main/log.sass
@@ -19,6 +19,9 @@ pre#log
   overflow-x: scroll
   counter-reset: line-numbering
 
+  .cut
+    padding: 20px 15px 0 55px
+
   p
     padding: 0 15px 0 55px
     margin: 0
